# black_jack_RL

./: .gitignore  README.md  create_data.py  hmm.py  pyproject.toml  requirements.txt
blackjack_lib/agents/: Q_agent.py
blackjack_lib/environment/: blackjack.py
blackjack_lib/hmm/: helper.py  hmm_create_data.py  hmm_data_comparison.py  hmm_data_comparison_turns.py  hmm_data_comparison_win.py  hmm_vanilla_implementation.py
examples/: compare_variations.py  hyperparameter_search.py  simulate_Q.py  simulate_game.py
hmm/: helper.py  hmm_data_comparison.py
src/agents/: Q_agent.py
src/environment/: __init__.py  deck.py
